<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etString"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"

        android:hint="@string/Enter_String" />
    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/etFloat"
        android:inputType="numberDecimal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:hint="@string/Enter_Float"
        />
    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/etDouble"
        android:inputType="numberDecimal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:hint="@string/Enter_Double"
        />
    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/etChar"
        android:inputType="text"
        android:maxLength="1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:hint="@string/Enter_Char"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:text="@string/PASS_VALUE"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="70dp"/>

</LinearLayout>
</layout>